# url

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.rst  build.rs  noxfile.py  pyproject.toml  release.toml  test-requirements.txt  url.pyi
.github/: SECURITY.md  dependabot.yml
.github/workflows/: CI.yml  zizmor.yml
docs/: api.rst  changes.rst  compatibility.rst  conf.py  index.rst  requirements.in  requirements.txt  spelling-wordlist.txt
src/: lib.rs
tests/: requirements.txt  test_url.py
